# ReconRaven

./: .gitignore  100_PERCENT_STATUS.md  99_PERCENT_COMPLIANCE_ACHIEVED.md  DF_QUICKSTART.txt  FIELD_ANALYSIS_SYSTEM.txt  IMPLEMENTATION_PLAN.md  NEW_FEATURES.md  README.md  REFACTORING_PROGRESS.md  ROE_AUDIT_REPORT.md  ROE_COMPLIANCE_FINAL_REPORT.md  ROE_PROGRESS_STATUS.md  ROE_REMAINING_WORK.md  THE_7_PERCENT.md  VIDEO_SCRIPT.md  add_frequency_ranges.py  advanced_scanner.py  analyze_all.py  app.py  batch_transcribe.py  binary_decoder.py  check_2m.py  cleanup.py  cleanup_ism.py  cleanup_recordings.py  concurrent_scanner.py  config.py  correlation_engine.py  dashboard_manager.py  database.py  decode_remote.py  decode_signal.py  device_signatures.json  error_log.txt  field_analyzer.py  fingerprint_signal.py  fix_all_pathlib.py  fix_analysis_modules.py  fix_bare_excepts.py  fix_bare_excepts_v2.py  (+38 more)
ROE/: generic_debug_contract.md  production_ready_contract.md  python_ROE.md
api/: API_DOCUMENTATION.md  __init__.py  auth.py  server.py
api/v1/: __init__.py  database.py  demodulation.py  direction_finding.py  scanning.py  transcription.py  websocket.py
config/: bands.yaml  demod_config.yaml  hardware.yaml
demodulation/: __init__.py  analog.py  digital.py
direction_finding/: __init__.py  array_sync.py  bearing_calc.py
docs/: DEPLOYMENT_AUTOMATION_GUIDE.md  DF_SETUP_GUIDE.md  HARDWARE_SHOPPING_LIST.md  RASPBERRY_PI_DEPLOYMENT.md  RF_SETUP_GUIDE.md  TEST_COMMANDS.md
examples/: df_bearing.py  drone_hunt.py  parallel_scan_demo.py  single_scan.py
hardware/: __init__.py  sdr_controller.py
reconraven/: __init__.py
reconraven/analysis/: __init__.py  binary.py  correlation.py  field.py  rtl433.py
reconraven/core/: __init__.py  central_logger.py  config.py  database.py  debug_helper.py  debug_router.py  scanner.py
reconraven/demodulation/: __init__.py  analog.py  digital.py
reconraven/direction_finding/: __init__.py  array_sync.py  bearing_calc.py
reconraven/hardware/: __init__.py  sdr_controller.py
reconraven/location/: __init__.py  database.py  detector.py  matcher.py  noaa.py  repeaterbook.py
reconraven/recording/: __init__.py  logger.py
reconraven/scanning/: __init__.py  anomaly_detect.py  drone_detector.py  mode_switch.py  scan_parallel.py  spectrum.py
reconraven/utils/: __init__.py  recording_manager.py
reconraven/visualization/: __init__.py  bearing_map.py
reconraven/visualization/templates/: dashboard_enhanced.html
reconraven/voice/: __init__.py  detector.py  monitor.py  transcriber.py
reconraven/web/: __init__.py  server.py
recording/: __init__.py  logger.py
scanning/: __init__.py  anomaly_detect.py  drone_detector.py  mode_switch.py  scan_parallel.py  spectrum.py
scripts/: pack_for_pi.sh  pi_quick_setup.sh  prepare_pi_deployment.py  validate_system.py
specs/: spec_sheet.md
systemd/: README.md  reconraven-api.service  reconraven-touch.service
tests/: __init__.py
touch_app/: __init__.py  api_client.py  main.py
touch_app/screens/: __init__.py  network.py  signals.py  timeline.py  transcripts.py  voice.py
visualization/: __init__.py  bearing_map.py
visualization/templates/: dashboard.html  dashboard_backup.html  dashboard_enhanced.html
web/: __init__.py  server.py
